--- a/codes/options/train/train_spsr.yml
+++ b/codes/options/train/train_spsr.yml
@@ -1,15 +1,15 @@
-name: '4x_template'
+name: '4x_SPSR'
 use_tb_logger: true
-model: 'srragan' # srragan | sr | srgan
+model: 'spsr'
 scale: 4
 batch_multiplier: 1
 gpu_ids: [0]
-use_amp: false # set to true if you have a Volta/Turing GPU or better.
+# AMP is currently unsupported
 
 #Dataset options:
 datasets:
   train:
-    name: 'DIV2K'
+    name: 'dataset'
     mode: 'LRHROTF'
     #dataroot_HR: '../datasets/train/hr' # Original, with a single directory
     #dataroot_LR: '../datasets/train/lr' # Original, with a single directory
@@ -26,7 +26,7 @@ datasets:
     subset_file: null
     use_shuffle: true
     n_workers: 4 # 0 to disable CPU multithreading, or an integrer representing CPU threads to use for dataloading
-    batch_size: 8
+    batch_size: 4
     HR_size: 128 # patch size. Default: 128
 
     #Color space conversion: 'color' for both LR and HR, 'color_LR' for LR independently, 'color_HR' for HR independently
@@ -72,7 +72,7 @@ datasets:
     #lr_cutout: false
     #lr_erasing: false
   val:
-    name: 'val_set14_part'
+    name: 'val_dataset'
     mode: 'LRHROTF'
     dataroot_HR: '../datasets/val/hr'
     dataroot_LR: '../datasets/val/lr'
@@ -87,93 +87,59 @@ datasets:
     lr_downscale_types: ['nearest', 'area'] # ['nearest', 'linear', 'cubic', 'area', 'lanczos4', 'linear_exact', 'matlab_bicubic'] # scale_algos #scaling interpolation options
 
 path:
-  root: 'D:/Code/GitHub/BasicSR'
+  root: 'D:/Code/GitHub/BasicSR' #modify to you own root path
+  # resume_state: '../experiments/4x_SPSR/training_state/'
   pretrain_model_G: '../experiments/pretrained_models/RRDB_PSNR_x4.pth'
   #pretrain_model_G: '../experiments/pretrained_models/RRDB_ESRGAN_x4.pth'
-  #resume_state: '../experiments/debug_002_RRDB_ESRGAN_x4_DIV2K/training_state/16.state'
 
 #Generator options:
 network_G:
-  #ESRGAN:
-  which_model_G: 'RRDB_net' # RRDB_net | sr_resnet
+  which_model_G: 'spsr_net'
   norm_type: null
   mode: 'CNA'
-  nf: 64 # number of discrim filters in the first conv layer
+  nf: 64
   nb: 23
-  in_nc: 3 # number of input image channels: 3 for RGB and 1 for grayscale
-  out_nc: 3 # number of output image channels: 3 for RGB and 1 for grayscale
+  in_nc: 3
+  out_nc: 3
   gc: 32
+  group: 1
   convtype: 'Conv2D' # 'Conv2D' | 'PartialConv2D'
   act_type: 'leakyrelu' # 'swish' | 'leakyrelu'
 
-  #SRGAN:
-  #which_model_G: 'sr_resnet' # RRDB_net | sr_resnet
-  #norm_type: null
-  #mode: 'CNA'
-  #nf: 64
-  #nb: 16
-  #in_nc: 3
-  #out_nc: 3
-
 #Discriminator options:
 network_D:
-  #ESRGAN:
-  which_model_D: 'discriminator_vgg' # discriminator_vgg | discriminator_vgg_128
+  which_model_D: 'discriminator_vgg'
   norm_type: 'batch'
   act_type: 'leakyrelu'
-  mode: 'CNA' # 'CNA' | 'NAC'
+  mode: 'CNA'
   nf: 64
   in_nc: 3
 
 #Training options:
 train:
   #Optimizer options:
-  lr_G: !!float 1e-4 # 2e-4 # starting lr_G #Test, default: 1e-4
-  lr_D: !!float 1e-4 # 4e-4 # starting lr_D #Test, default: 1e-4
-
-  # ESRGAN-FS Augmentations
-  use_frequency_separation: true
-
+  lr_G: !!float 1e-4
+  lr_D: !!float 1e-4
+  lr_D_grad: !!float 1e-4
+  
   #Scheduler options:
-  #For MultiStepLR (ESRGAN, default):
   lr_scheme: 'MultiStepLR'
-  lr_steps: [50000, 100000, 200000, 300000] # training from scratch
-  #lr_steps: [50000, 75000, 85000, 100000] # finetuning
-  lr_gamma: 0.5 # lr change at every step (multiplied by)
-
-  #For StepLR_Restart:
-  #lr_gamma: 0.9 # lr change at every step (multiplied by)
-  #lr_scheme: 'StepLR_Restart' # 'MultiStepLR' | MultiStepLR_Restart | 'StepLR' | 'StepLR_Restart' | CosineAnnealingLR_Restart
-  #lr_step_sizes: [200, 100, 250] # Steps for each restart for 'StepLR_Restart'
-  #restarts: [138000, 172500] # Restart iterations for 'MultiStepLR_Restart', 'StepLR_Restart' and 'CosineAnnealingLR_Restart'
-  #restart_weights: [1, 0.5, 0.5]#lr_() * each weight in 'restart_weights' for each restart in 'restarts'
-  ##clear_state: true
-
-  #For MultiStepLR_Restart:
-  #lr_gamma: 0.9
-  #lr_scheme: 'MultiStepLR_Restart' # 'MultiStepLR' | MultiStepLR_Restart | 'StepLR' | 'StepLR_Restart' | CosineAnnealingLR_Restart
-  #lr_steps: [34500, 69000, 103500, 155250, 189750, 241500] # For 'MultiStepLR' and 'MultiStepLR_Restart'
-  #restarts: [138000, 172500] # Restart iterations for 'MultiStepLR_Restart', 'StepLR_Restart' and 'CosineAnnealingLR_Restart'
-  #restart_weights: [0.5, 0.5] # lr_() * each weight in 'restart_weights' for each restart in 'restarts'
-  ##clear_state: true
+  lr_steps: [50000, 100000, 200000, 300000]
+  lr_gamma: 0.5
 
   #Losses:
-  pixel_criterion: 'l1' # 'l1' | 'l2' | 'cb' | 'elastic' | 'relativel1' | 'l1cosinesim' # pixel loss
-  pixel_weight: !!float 1e-2 # 1e-2 | 1
-  feature_criterion: 'l1' # 'l1' | 'l2' | 'cb' | 'elastic' # feature loss (VGG feature network)
+  pixel_criterion: 'l1'
+  pixel_weight: !!float 1e-2
+  feature_criterion: 'l1'
   feature_weight: 1
-  #hfen_criterion: 'l1' # hfen: 'l1' | 'l2' | 'rel_l1' | 'rel_l2' # helps in deblurring and finding edges, lines
-  #hfen_weight: !!float 1e-1
-  #tv_type: 'normal' # helps in denoising, reducing upscale artefacts
-  #tv_weight: !!float 1e-6
-  #tv_norm: 2 # 1 for l1 (default) or 2 for l2. Change 'tv_weight' so the l_g_tv is around 1e-02
-  #ssim_type: 'ms-ssim' # 'ssim' | 'ms-ssim' # helps to maintain luminance, contrast and covariance between SR and HR
-  #ssim_weight: 1
-  gan_type: 'vanilla' # 'vanilla' | basic
-  gan_weight: !!float 5e-3 # *
-  #lpips_weight: 1 # perceptual loss
-  #lpips_type: 'net-lin' # net-lin | net *
-  #lpips_net: 'squeeze' # 'vgg' | 'alex' | 'squeeze'
+  gan_type: 'vanilla'
+  gan_weight: !!float 5e-3
+  gradient_pixel_weight: !!float 1e-2
+  gradient_gan_weight: !!float 5e-3
+  pixel_branch_criterion: 'l1'
+  pixel_branch_weight: !!float 5e-1
+  Branch_pretrain: 1
+  Branch_init_iters: 5000
 
   #for wgan-gp
   #D_update_ratio: 1
@@ -181,7 +147,7 @@ train:
   #gp_weigth: 10
 
 #Other training options:
-  manual_seed: 0
+  manual_seed: 9
   niter: !!float 5e5
   val_freq: 1000 # 5e3
 
