Add other losses to SPSR train config
Convert Branch_pretrain to boolean

--- a/codes/options/train/train_spsr.yml
+++ b/codes/options/train/train_spsr.yml
@@ -132,14 +132,22 @@ train:
   pixel_weight: !!float 1e-2
   feature_criterion: 'l1'
   feature_weight: 1
+  #hfen_criterion: 'l1' # hfen: 'l1' | 'l2' | 'rel_l1' | 'rel_l2' # helps in deblurring and finding edges, lines
+  #hfen_weight: !!float 1e-1
+  #tv_type: 'normal' # helps in denoising, reducing upscale artefacts
+  #tv_weight: !!float 1e-6
+  #tv_norm: 2 # 1 for l1 (default) or 2 for l2. Change 'tv_weight' so the l_g_tv is around 1e-02
+  #ssim_type: 'ms-ssim' # 'ssim' | 'ms-ssim' # helps to maintain luminance, contrast and covariance between SR and HR
+  #ssim_weight: 1
   gan_type: 'vanilla'
   gan_weight: !!float 5e-3
+  #lpips_weight: 1 # perceptual loss
+  #lpips_type: 'net-lin' # net-lin | net *
+  #lpips_net: 'squeeze' # 'vgg' | 'alex' | 'squeeze'
   gradient_pixel_weight: !!float 1e-2
   gradient_gan_weight: !!float 5e-3
   pixel_branch_criterion: 'l1'
   pixel_branch_weight: !!float 5e-1
-  Branch_pretrain: 1
-  Branch_init_iters: 5000
 
   #for wgan-gp
   #D_update_ratio: 1
@@ -147,6 +155,8 @@ train:
   #gp_weigth: 10
 
 #Other training options:
+  Branch_pretrain: true
+  Branch_init_iters: 5000
   manual_seed: 9
   niter: !!float 5e5
   val_freq: 1000 # 5e3
